# c-multithreaded-queue

./: CMakeLists.txt  Makefile.am  build.sh  queue.vim
include/: abstract_queue_observer.h  empty_container_error.h  make_unique.h  observable_queue.h  queue.h  queue_observer.h  smart_queue_listener.h
src/: main.cpp  observable_queue.cpp  queue_observer.cpp
tests/unit/include/: mock_queue_observer.h  test_observable_queue.h  test_queue.h
tests/unit/src/: test_observable_queue.cpp  test_queue.cpp
